@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2010, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2013, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -63,14 +63,36 @@ public final class JAXWSUtils {
 
     public static URL getFileOrURL(String fileOrURL) throws IOException {
         try {
-            return new URL(fileOrURL);
+          URL url = new URL(fileOrURL);
+          String scheme = String.valueOf(url.getProtocol()).toLowerCase();
+          if (scheme.equals("http") || scheme.equals("https"))
+            return new URL(url.toURI().toASCIIString());
+          return url;
+        } catch (URISyntaxException e) {
+            return new File(fileOrURL).toURL();
         } catch (MalformedURLException e) {
             return new File(fileOrURL).toURL();
         }
     }
+
+  public static URL getEncodedURL(String urlStr) throws MalformedURLException {
+      URL url = new URL(urlStr);
+      String scheme = String.valueOf(url.getProtocol()).toLowerCase();
+      if (scheme.equals("http") || scheme.equals("https")) {
+          try {
+              return new URL(url.toURI().toASCIIString());
+          } catch (URISyntaxException e) {
+              MalformedURLException malformedURLException = new MalformedURLException(e.getMessage());
+              malformedURLException.initCause(e);
+              throw malformedURLException;
+          }
+       }
+       return url;
+  }
+
     private static String escapeSpace( String url ) {
         // URLEncoder didn't work.
-        StringBuffer buf = new StringBuffer();
+        StringBuilder buf = new StringBuilder();
         for (int i = 0; i < url.length(); i++) {
             // TODO: not sure if this is the only character that needs to be escaped.
             if (url.charAt(i) == ' ')
@@ -87,8 +109,8 @@ public final class JAXWSUtils {
         try {
             URL baseURL = new File(".").getCanonicalFile().toURL();
             return new URL(baseURL, name).toExternalForm();
-        } catch( IOException e ) {
-            ; // ignore
+        } catch( IOException e) {
+            //ignore
         }
         return name;
     }
@@ -96,6 +118,7 @@ public final class JAXWSUtils {
     /**
      * Checks if the system ID is absolute.
      */
+    @SuppressWarnings("ResultOfObjectAllocationIgnored")
     public static  void checkAbsoluteness(String systemId) {
         // we need to be able to handle system IDs like "urn:foo", which java.net.URL can't process,
         // but OTOH we also need to be able to process system IDs like "file://a b c/def.xsd",
@@ -103,10 +126,10 @@ public final class JAXWSUtils {
         // eventually we need a proper URI class that works for us.
         try {
             new URL(systemId);
-        } catch( MalformedURLException _ ) {
+        } catch( MalformedURLException mue) {
             try {
                 new URI(systemId);
-            } catch (URISyntaxException e ) {
+            } catch (URISyntaxException e) {
                 throw new IllegalArgumentException("system ID '"+systemId+"' isn't absolute",e);
             }
         }
